/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GreenEnergyHub.Aggregation.Domain";

message MeteringPointMessage {
  string mRID = 1;
  string MessageReference = 2;
  
  message _MarketDocument {
    string mRID = 1;
    string Type = 2;
    google.protobuf.Timestamp CreatedDateTime = 3;
    
    message _SenderMarketParticipant {
      string mRID = 1;
      string Type = 2;
    }
    _SenderMarketParticipant SenderMarketParticipant = 4;
    
    message _RecipientMarketParticipant {
      string mRID = 1;
      string Type = 2;
    }
    _RecipientMarketParticipant RecipientMarketParticipant = 5;
    string ProcessType = 6;
    string MarketServiceCategory_Kind = 7;
  }
  _MarketDocument MarketDocument = 3;
  string MktActivityRecord_Status = 4;
  string Product = 5;
  string QuantityMeasurementUnit_Name = 6;
  string MarketEvaluationPointType = 7;
  string SettlementMethod = 8;
  string MarketEvaluationPoint_mRID = 9;
  string CorrelationId = 10;
  
  message _Period {
    string Resolution = 1;

    message _TimeInterval {
      google.protobuf.Timestamp Start = 1;
      google.protobuf.Timestamp End = 2;
    }
    _TimeInterval TimeInterval = 2;

    message _Points {
      double Quantity = 1;
      string Quality = 2;
      google.protobuf.Timestamp Time = 3;
    }
    _Points Points = 3;
  }
  _Period Period = 11;
}